# batchscripts

./: 10argumentsread.cmd  11functioncall.cmd  12checkdebugrelease.cmd  13checkdebugreleaseforce.cmd  14RenameFileWithIndex.cmd  14RenameWithIndex.cmd  16parseTextFile.cmd  17FireCommandInParentFolders.cmd  18RenameFoldersWithIndex.cmd  19CheckGitStatus.cmd  1evenodd.cmd  20PushGitRepos.cmd  20UpdateGitRepos.cmd  21SetHelperScriptsPath.bat  21buildproject.cmd  22UseExitCode.cmd  23remotelogin.cmd  25ConnectNetworkDrives.bat  25ConnectNetworkDrives.bat.bak  26filenames.bat  2factorial.cmd  3primecheck.cmd  4factorialC.cmd  5localscope.cmd  6primecheckC.cmd  7PrintHello.cmd  8FolderContents.cmd  9FileExistsVariabledefined.cmd  Learnings.txt  argumentChec.cmd  buildvtk.cmd  createtree.cmd  excercises.txt  factorial.cmd  functioncall.cmd  localscope.cmd  primecheckC.cmd  ta.cmd  tb.cmd  test.cmd  (+1 more)
Cmake/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  CMakeLists3.txt  CMakeLists5.txt
PuttyScripts/: kill.txt  killscrc.bat  sccmd.txt  scrc.bat  viewscrc.bat
SCRCQuick/: rccmd.txt  view.txt
build_debug/: log.txt
buildproject/: buildAll.cmd  buildCT_system.cmd  buildSteps.txt  builddcmtk.cmd  builddicommwl.cmd  buildgcal.cmd  buildjson.cmd  buildlibconfig.cmd  buildlibpeq.cmd  buildlogger.cmd  buildmakedicom.cmd  buildpugixml.cmd  buildrecon.cmd  buildsenddicom.cmd  buildvctgui.cmd  buildvtk.cmd  copyFaxitronRequiredDlls.cmd  copyRequiredDlls.cmd  copysourcecode.cmd  createbuildfolder.cmd  createtree.cmd  unzipAll.cmd
